New tests, removed unused import, small refactor